assets/css/styles.css
:root {
    --planetary: #334eac;
    --universe: #7096d1;
    --milkyway: #fff9f0;
    --venus: #bad6e8;
    --meteor: #f7f2eb;
    --galaxy: #081f5c;
    --sky: #d0e3ff;
}

html {
    width: 100%;
    height: 100%;

    min-width: 400px;

    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

iframe {
    width: 100%;
    height: 100%;

    display: block;

    border: 0;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    width: 100%;
    height: 100%;

    background: var(--milkyway);
}

a {
    color: var(--planetary);
    text-decoration: none;
}

nav a {
    color: inherit;
}

nav#primary-nav{
    background: #B4D8EE;
    border-bottom: 2px solid #7096D1;
    padding:2rem 5% 1rem 5%;
    position: sticky;
    display: flex;
    flex-direction: column;
}

.nav-title{
    font-family: "Playfair Display", serif;
    font-size: 4rem;
    font-weight: 400;
    margin: 0 0 25px 0;
    line-height: 1;
}

.main-menu{
    display:flex;
    gap: 15px;
}

.main-menu > li > a, .submenu-toggle {
    display: inline-block;
    background: white;
    padding: 10px 25px;
    font-weight: 700;
    font-size: 0.95rem;
    border:none;
    cursor: pointer;
    font-family: inherit;
    text-align: center;
}

.submenu-toggle::after{
    content:'\2304';
    font-size: 0.8rem;
    margin-left: 10px;
    vertical-align: middle;
}

.main-menu li{
    position: relative;
}

.submenu{
    display:none;
    position: absolute;
    top:100%;
    left:0; 
    background: white;
    min-width: 200px;
    margin-top: 2px;
}

li.is-open .submenu{
    display: block;
}

.submenu li {
    border-bottom: 1px solid #eee;
}

.submenu a {
    display: block;
    padding: 12px 20px;
    font-size: 0.85rem;
}

.submenu a:hover {
    background: #f8f8f8;
    color: #7096D1;
}

#menu-button{
    display: none;
    background: white;
    border:1px solid #7096D1;
    padding: 8px 15px;
    cursor: pointer;
    margin-bottom: 15px;

    font-weight: 700;
    font-size: 0.95rem;
    border:none;
    font-family: inherit;
    text-align: center;
}

nav li.is-current a {
    background-color: var(--universe);
}

/* main content */
main {
    margin: 20px;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

main > div {
    margin: 0;
    padding: 0;

    max-width: 1000px;
    width: 100%;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
    gap: 20px;
}

main > div > section {
    margin: 0;
    padding: 10px;

    background-color: var(--sky);
    border-radius: 12px;
}

main > div > section.large {
    grid-column: span 3;
}

main > div > section.medium {
    grid-column: span 2;
}

main > div > section.small {
    grid-column: span 1;
}

main > div > section h2 {
    margin: 5px 0 0 0;
}

main > div > section p {
    margin: 10px 0;
}

main > div > section > img {
    border-radius: 12px;
}

main > div > section a.continue {
    display: block;
    text-align: right;
}

main img.left {
    margin-right: 10px;

    float: left;
}

main img.right {
    margin-left: 10px;

    float: right;
}

/* footer */
.typography-footer{
    background-color: #B4D8EE;
    color:#334EAC;
    padding:60px 5% 20px 5%;
    font-family: Verdana, sans-serif; 
}


.footer-container{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
    gap:40px;
}

.footer-website-name h2{
    font-family: "Playfair Display", serif;
    font-size: 4rem;
    font-weight: 400;
    margin: 0;
}

.footer-info{
    display: flex;
    gap:80px;
}

.footer-column h3{
    font-size: 1.8rem;
    font-weight: 400;
    margin: 0 0 15px 0;
}

.footer-column ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.footer-column li {
    margin-bottom: 5px;
}

.footer-column p {
    max-width: 250px;
    line-height: 1.4;
    margin: 0;
}
.contact-link {
    font-size: 1.8rem;
    text-decoration: underline;
    font-weight: 400;
}
.footer-bottom-section {
    margin-top: 60px;
    text-align: right;
    font-size: 0.9rem;
}

/* media query */

@media (max-width: 800px) {
    main > div {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;
    }

    #menu-button {
        display: inline;
    }

    main img.left, main img.right {
        float: none;
        width: 100%;
    }

    .footer-container{
        flex-direction: column;
        align-items: center;


    }

    .footer-info{
        flex-direction: column;
        align-items: center;
    }

    .footer-column {
        width: 100%;
    }
}

